--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -11,6 +11,7 @@
               <a href="/programming/python/data-structures-and-algorithms/binary-search/"><li>Binary Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/jump-search/"><li>Jump Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/sorting/"><li>Sorting</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/big-o-notation/"><li>Big O Notation</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
