update astronomy layout

--- a/_layouts/astronomy.html
+++ b/_layouts/astronomy.html
@@ -8,8 +8,7 @@
             <a href="/astronomy/"><li>Introduction to Astronomy</li></a>
             <a href="/astronomy/stars/"><li>Stars</li></a>
             <a href="/astronomy/constellations/"><li>Constellations</li></a>
-            <a href="/astronomy/planets/"><li>Planets</li></a>
-            <a href="/astronomy/moons/"><li>Moons</li></a>
+            <a href="/astronomy/solar-system/"><li>Solar System</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
