--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -10,6 +10,8 @@
               <a href="/programming/python/data-structures-and-algorithms/linear-search/"><li>Linear Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/binary-search/"><li>Binary Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/jump-search/"><li>Jump Search</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/breadth-first-search/"><li>Breadth First Search</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/depth-first-search/"><li>Depth First Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/sorting/"><li>Sorting</li></a>
               <a href="/programming/python/data-structures-and-algorithms/big-o-notation/"><li>Big O Notation</li></a>
         </ul>
