--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -13,6 +13,7 @@
               <a href="/programming/python/data-structures-and-algorithms/breadth-first-search/"><li>Breadth First Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/depth-first-search/"><li>Depth First Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/sorting/"><li>Sorting</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/bubble-sort/"><li>Bubble Sort</li></a>
               <a href="/programming/python/data-structures-and-algorithms/big-o-notation/"><li>Big O Notation</li></a>
         </ul>
         {%- include footer.html -%}
