move astronomy into physics

--- a/_layouts/astronomy.html
+++ b/_layouts/astronomy.html
@@ -5,10 +5,10 @@
         {%- include nav.html -%}
         <main>{{content}}</main>
         <ul id="tutorials-list">
-            <a href="/astronomy/"><li>Introduction to Astronomy</li></a>
-            <a href="/astronomy/stars/"><li>Stars</li></a>
-            <a href="/astronomy/constellations/"><li>Constellations</li></a>
-            <a href="/astronomy/solar-system/"><li>Solar System</li></a>
+            <a href="/physics/astronomy/"><li>Introduction to Astronomy</li></a>
+            <a href="/physics/astronomy/stars/"><li>Stars</li></a>
+            <a href="/physics/astronomy/constellations/"><li>Constellations</li></a>
+            <a href="/physics/astronomy/solar-system/"><li>Solar System</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
