--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,13 @@
 		</div>
 	</div>
 	<div class="dropdown">
+		<button class="dropbtn"><a href="/physics/" style="font-weight:400;">Physics&#x25BC</a>
+		</button>
+		<div class="dropdown-content">
+		   <a href="/physics/astronomy/">Algebra</a>
+	   </div>
+   </div>
+	<div class="dropdown">
 		<button class="dropbtn"><a href="/tutorial-index/" style="font-weight:400;">More&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
