--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,7 @@
 		<button class="dropbtn"><a href="/physics/" style="font-weight:400;">Physics&#x25BC</a>
 		</button>
 		<div class="dropdown-content">
-		   <a href="/physics/astronomy/">Algebra</a>
+		   <a href="/physics/astronomy/">Astronomy</a>
 	   </div>
    </div>
 	<div class="dropdown">
