--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,7 @@
 		</button>
 		<div class="dropdown-content">
 		   <a href="/physics/astronomy/">Astronomy</a>
+		   <a href="/physics/electrical-engineering/">Electrical Engineering</a>
 	   </div>
    </div>
 	<div class="dropdown">
