update electrical engineering layout

--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
             <a href="/physics/electrical-engineering/"><li>Introduction to Electrical Engineering</li></a>
+            <a href="/physics/electrical-engineering/electricity/"><li>Electricity</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
