--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -8,6 +8,7 @@
         <ul id="tutorials-list">
             <a href="/physics/electrical-engineering/"><li>Introduction to Electrical Engineering</li></a>
             <a href="/physics/electrical-engineering/electricity/"><li>Electricity</li></a>
+            <a href="/physics/electrical-engineering/conductors-insulators/"><li>Conductors and Insulators</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
