--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -6,6 +6,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/data-structures-and-algorithms/"><li>Introduction to Data Structures And Algorithms In Python</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/algorithms/"><li>Algorithms</li></a>
               <a href="/programming/python/data-structures-and-algorithms/searching/"><li>Searching</li></a>
               <a href="/programming/python/data-structures-and-algorithms/linear-search/"><li>Linear Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/binary-search/"><li>Binary Search</li></a>
@@ -13,6 +14,10 @@
               <a href="/programming/python/data-structures-and-algorithms/breadth-first-search/"><li>Breadth First Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/depth-first-search/"><li>Depth First Search</li></a>
               <a href="/programming/python/data-structures-and-algorithms/sorting/"><li>Sorting</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/stacks/"><li>Stacks</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/queues/"><li>Queues</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/deques/"><li>Deques</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/data-structures/"><li>Data Structures</li></a>
               <a href="/programming/python/data-structures-and-algorithms/bubble-sort/"><li>Bubble Sort</li></a>
               <a href="/programming/python/data-structures-and-algorithms/big-o-notation/"><li>Big O Notation</li></a>
         </ul>
