--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,7 @@
  		</button>
  		<div class="dropdown-content">
 			<a href="/math/algebra/">Algebra</a>
+			<a href="/math/shape-space/">Shape and Space</a>
 		</div>
 	</div>
 	<div class="dropdown">
