--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/math/shape-space/"><li>Introduction to Shape and Space</li></a>
+              <a href="/math/shape-space/transformations/"><li>Transformations</li></a>
         </ul>
               {%- include footer.html -%}
     </body>
