update electrical engineering layout

--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -10,6 +10,7 @@
             <a href="/physics/electrical-engineering/electricity/"><li>Electricity</li></a>
             <a href="/physics/electrical-engineering/conductors-insulators/"><li>Conductors and Insulators</li></a>
             <a href="/physics/electrical-engineering/circuits/"><li>Circuits</li></a>
+            <a href="/physics/electrical-engineering/circuit-diagrams/"><li>Circuit Diagrams</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
