update electrical engineering layout

--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -10,7 +10,12 @@
             <a href="/physics/electrical-engineering/electricity/"><li>Electricity</li></a>
             <a href="/physics/electrical-engineering/conductors-insulators/"><li>Conductors and Insulators</li></a>
             <a href="/physics/electrical-engineering/circuits/"><li>Circuits</li></a>
+            <a href="/physics/electrical-engineering/current/"><li>Current</li></a>
+            <a href="/physics/electrical-engineering/voltage/"><li>Voltage</li></a>
+            <a href="/physics/electrical-engineering/resistance/"><li>Resistance</li></a>
             <a href="/physics/electrical-engineering/circuit-diagrams/"><li>Circuit Diagrams</li></a>
+            <a href="/physics/electrical-engineering/capacitors/"><li>Capacitors</li></a>
+            <a href="/physics/electrical-engineering/transistors/"><li>Transistors</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
