google site verification test

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,5 @@
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/styles/vs.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
+    <meta name="google-site-verification" content="puUeUDd7CM9IdFqWvJBve7HhVte33Nlo81GfHmQpvW8" />
 </head>
