--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -14,6 +14,7 @@
             <a href="/physics/electrical-engineering/voltage/"><li>Voltage</li></a>
             <a href="/physics/electrical-engineering/resistance/"><li>Resistance</li></a>
             <a href="/physics/electrical-engineering/circuit-diagrams/"><li>Circuit Diagrams</li></a>
+            <a href="/physics/electrical-engineering/ohms-law/"><li>Ohm's Law</li></a>
             <a href="/physics/electrical-engineering/capacitors/"><li>Capacitors</li></a>
             <a href="/physics/electrical-engineering/transistors/"><li>Transistors</li></a>
         </ul>
