--- a/_layouts/jekyll.html
+++ b/_layouts/jekyll.html
@@ -7,6 +7,7 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/jekyll/"><li>Introduction to Jekyll</li></a>
+              <a href="/programming/jekyll/setup/"><li>Setup</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
