--- a/_layouts/c.html
+++ b/_layouts/c.html
@@ -8,7 +8,7 @@
         <ul id="tutorials-list">
             <a href="/programming/c/"><li>Introduction to C</li></a>
             <a href="/programming/c/setup/"><li>Setup</li></a>
-            <a href="/programming/c/first-program/"><li>Your First C++ Program</li></a>
+            <a href="/programming/c/first-program/"><li>Your First C Program</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
