--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -15,6 +15,7 @@
             <a href="/physics/electrical-engineering/resistance/"><li>Resistance</li></a>
             <a href="/physics/electrical-engineering/circuit-diagrams/"><li>Circuit Diagrams</li></a>
             <a href="/physics/electrical-engineering/ohms-law/"><li>Ohm's Law</li></a>
+            <a href="/physics/electrical-engineering/power/"><li>Electrical Power</li></a>
             <a href="/physics/electrical-engineering/capacitors/"><li>Capacitors</li></a>
             <a href="/physics/electrical-engineering/transistors/"><li>Transistors</li></a>
         </ul>
