update layout links

--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -7,6 +7,9 @@
         <ul id="tutorials-list">
               <a href="/math/shape-space/"><li>Introduction to Shape and Space</li></a>
               <a href="/math/shape-space/transformations/"><li>Transformations</li></a>
+              <a href="/math/shape-space/translations/"><li>Translations</li></a>
+              <a href="/math/shape-space/reflections/"><li>Reflections</li></a>
+              <a href="/math/shape-space/rotations/"><li>Rotations</li></a>
         </ul>
               {%- include footer.html -%}
     </body>
