Update Python layout

--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -21,6 +21,7 @@
               <a href="/programming/python/if-else/"><li>If/Else</li></a>
               <a href="/programming/python/for-loops/"><li>For Loops</li></a>
               <a href="/programming/python/while-loops/"><li>While Loops</li></a>
+              <a href="/programming/python/json/"><li>Python</li></a>
               <a href="/programming/python/requests/"><li>Requests</li></a>
               <a href="/programming/python/f-strings/"><li>F-Strings</li></a>
         </ul>
