--- a/_layouts/python.html
+++ b/_layouts/python.html
@@ -24,6 +24,7 @@
               <a href="/programming/python/json/"><li>JSON</li></a>
               <a href="/programming/python/requests/"><li>Requests</li></a>
               <a href="/programming/python/f-strings/"><li>F-Strings</li></a>
+            <a href="/programming/python/casting/"><li>Casting</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
