Update Java layout

--- a/_layouts/java.html
+++ b/_layouts/java.html
@@ -9,6 +9,8 @@
             <a href="/programming/java/"><li>Introduction to Java</li></a>
             <a href="/programming/java/environment-setup/"><li>Environment Setup</li></a>
             <a href="/programming/java/first-program/"><li>Your First Java Program</li></a>
+            <a href="/programming/java/variables/"><li>Variables</li></a>
+            <a href="/programming/java/data-types/"><li>Data Types</li></a>
             <a href="/programming/java/comments/"><li>Comments</li></a>
         </ul>
         {%- include footer.html -%}
