Rename Python cool projects

--- a/_layouts/python-cool-projects.html
+++ b/_layouts/python-cool-projects.html
@@ -6,11 +6,11 @@
         <main>{{content}}</main>
         <ul id="tutorials-list">
               <a href="/programming/python/cool-projects/"><li>Cool Python Projects</li></a>
-              <a href="/programming/python/cool-projects/1-number-guessing/"><li>#1 Number Guessing Game</li></a>
-              <a href="/programming/python/cool-projects/2-counter-app/"><li>#2 Counter App</li></a>
-              <a href="/programming/python/cool-projects/3-simple-autoclicker/"><li>#3 Simple Autoclicker</li></a>
-              <a href="/programming/python/cool-projects/4-trivia-game/"><li>#4 Trivia Game</li></a>
-              <a href="/programming/python/cool-projects/5-password-generator/"><li>#5 Password Generator</li></a>
+              <a href="/programming/python/cool-projects/number-guessing/"><li>Number Guessing Game</li></a>
+              <a href="/programming/python/cool-projects/counter-app/"><li>Counter App</li></a>
+              <a href="/programming/python/cool-projects/simple-autoclicker/"><li>Simple Autoclicker</li></a>
+              <a href="/programming/python/cool-projects/trivia-game/"><li>Trivia Game</li></a>
+              <a href="/programming/python/cool-projects/password-generator/"><li>Password Generator</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
