--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -20,6 +20,7 @@
               <a href="/programming/python/data-structures-and-algorithms/queues/"><li>Queues</li></a>
               <a href="/programming/python/data-structures-and-algorithms/deques/"><li>Deques</li></a>
               <a href="/programming/python/data-structures-and-algorithms/big-o-notation/"><li>Big O Notation</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/dynamic-programming/"><li>Dynamic Programming</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
