--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -21,6 +21,9 @@
               <a href="/programming/python/data-structures-and-algorithms/deques/"><li>Deques</li></a>
               <a href="/programming/python/data-structures-and-algorithms/big-o-notation/"><li>Big O Notation</li></a>
               <a href="/programming/python/data-structures-and-algorithms/dynamic-programming/"><li>Dynamic Programming</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/recursion/"><li>Recursion</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/caching/"><li>Caching</li></a>
+              <a href="/programming/python/data-structures-and-algorithms/memoization/"><li>Memoization</li></a>
         </ul>
         {%- include footer.html -%}
     </body>
