--- a/_layouts/python-data-alg.html
+++ b/_layouts/python-data-alg.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     {%- include head.html -%}
+    <link rel="stylesheet" href="/programming/python/data-structures-and-algorithms/queues.css">
     <body>
         {%- include nav.html -%}
         <main>{{content}}</main>
