--- a/programming/python/data-structures-and-algorithms/queues.css
+++ b/programming/python/data-structures-and-algorithms/queues.css
@@ -6,7 +6,7 @@
 }
 .Column {
     display: table-cell;
-    height: calc(100vh / 5)
+    height: calc(100vw / 5)
     width: 75px;
     border-radius: 50%;
     border: 2px solid black;
