--- a/programming/python/data-structures-and-algorithms/queues.css
+++ b/programming/python/data-structures-and-algorithms/queues.css
@@ -6,11 +6,12 @@
 }
 .Column {
     display: table-cell;
-    height: calc(100vw / 5)
+    height: 75px;
     width: 75px;
     border-radius: 50%;
     border: 2px solid black;
     text-align: center;
     margin-bottom: 10px;
+    vertical-align: middle
 
 }
