--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -17,6 +17,8 @@
             <a href="/physics/electrical-engineering/ohms-law/"><li>Ohm's Law</li></a>
             <a href="/physics/electrical-engineering/power/"><li>Electrical Power</li></a>
             <a href="/physics/electrical-engineering/capacitors/"><li>Capacitors</li></a>
+            <a href="/physics/electrical-engineering/inductors/"><li>Inductors</li></a>
+            <a href="/physics/electrical-engineering/diodes/"><li>Diodes</li></a>
             <a href="/physics/electrical-engineering/transistors/"><li>Transistors</li></a>
         </ul>
         {%- include footer.html -%}
