--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -9,6 +9,7 @@
             <a href="/physics/electrical-engineering/"><li>Introduction to Electrical Engineering</li></a>
             <a href="/physics/electrical-engineering/electricity/"><li>Electricity</li></a>
             <a href="/physics/electrical-engineering/conductors-insulators/"><li>Conductors and Insulators</li></a>
+            <a href="/physics/electrical-engineering/semiconductors/"><li>Semiconductors</li></a>
             <a href="/physics/electrical-engineering/circuits/"><li>Circuits</li></a>
             <a href="/physics/electrical-engineering/current/"><li>Current</li></a>
             <a href="/physics/electrical-engineering/voltage/"><li>Voltage</li></a>
