--- a/_layouts/python-threading.html
+++ b/_layouts/python-threading.html
@@ -1,1 +1,13 @@
-
+<!doctype html>
+<html lang="en">
+    {%- include head.html -%}
+    <body>
+        {%- include nav.html -%}
+        {%- include wip-alert.html -%}
+        <main>{{content}}</main>
+        <ul id="tutorials-list">
+            <a href="/programming/python/threading/"><li>Introduction to Threading</li></a>
+        </ul>
+        {%- include footer.html -%}
+    </body>
+</html>
