--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -11,6 +11,7 @@
               <a href="/math/shape-space/translations/"><li>Translations</li></a>
               <a href="/math/shape-space/reflections/"><li>Reflections</li></a>
               <a href="/math/shape-space/rotations/"><li>Rotations</li></a>
+              <a href="/math/shape-space/angles/"><li>Angles</li></a>
         </ul>
               {%- include footer.html -%}
     </body>
