--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -12,6 +12,7 @@
               <a href="/math/shape-space/reflections/"><li>Reflections</li></a>
               <a href="/math/shape-space/rotations/"><li>Rotations</li></a>
               <a href="/math/shape-space/angles/"><li>Angles</li></a>
+              <a href="/math/shape-space/protractors/"><li>Protractors</li></a>
         </ul>
               {%- include footer.html -%}
     </body>
