--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -13,6 +13,7 @@
               <a href="/math/shape-space/rotations/"><li>Rotations</li></a>
               <a href="/math/shape-space/angles/"><li>Angles</li></a>
               <a href="/math/shape-space/protractors/"><li>Protractors</li></a>
+              <a href="/math/shape-space/interior-angles/"><li>Interior Angles</li></a>
         </ul>
               {%- include footer.html -%}
     </body>
