--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -11,10 +11,16 @@
               <a href="/math/shape-space/translations/"><li>Translations</li></a>
               <a href="/math/shape-space/reflections/"><li>Reflections</li></a>
               <a href="/math/shape-space/rotations/"><li>Rotations</li></a>
+              <a href="/math/shape-space/polygons/"><li>Polygons</li></a>
               <a href="/math/shape-space/angles/"><li>Angles</li></a>
               <a href="/math/shape-space/protractors/"><li>Protractors</li></a>
               <a href="/math/shape-space/interior-angles/"><li>Interior Angles</li></a>
-        </ul>
+              <a href="/math/shape-space/perimeter-and-area/"><li>Perimeter and Area</li></a>
+              <a href="/math/shape-space/volume/"><li>Volume</li></a>
+              <a href="/math/shape-space/triangles/"><li>Triangles</li></a>
+              <a href="/math/shape-space/circles/"><li>Circles</li></a>
+              <a href="/math/shape-space/cartesian-plane/"><li>Cartesian Plane</li></a>
+            </ul>
               {%- include footer.html -%}
     </body>
 </html>
