--- a/_layouts/shape-space.html
+++ b/_layouts/shape-space.html
@@ -20,6 +20,7 @@
               <a href="/math/shape-space/triangles/"><li>Triangles</li></a>
               <a href="/math/shape-space/circles/"><li>Circles</li></a>
               <a href="/math/shape-space/cartesian-plane/"><li>Cartesian Plane</li></a>
+              <a href="/math/shape-space/lines/"><li>Lines</li></a>
             </ul>
               {%- include footer.html -%}
     </body>
