--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer>
     <div id="footer-icons">
-        <a href="mailto:learnmonkey2@gmail.com" class="footer-link"><i class="fas fa-envelope footer-icon fa-2x"></i></a>
+        <a href=https://discord.gg/aecVAgzgqV" class="footer-link"><i class="fa-brands fa-discord fa-2x"></i></a>
         <a target="_blank" href="https://github.com/learnmonkey/learnmonkey.github.io" class="footer-link"><i class="fab fa-github-square footer-icon fa-2x"></i></a>
-        <a target="_blank" href="https://twitter.com/learn_monkey" class="footer-link"><i class="fab fa-twitter footer-icon fa-2x"></i></a>
         <a href="/settings/" class="footer-link"><i class="fas fa-cog footer-icon fa-2x"></i></a>
     </div>
     <div id="footer-copyright">
