--- a/_layouts/electrical-engineering.html
+++ b/_layouts/electrical-engineering.html
@@ -3,9 +3,13 @@
     {%- include head.html -%}
     <body>
         {%- include nav.html -%}
-        {%- include wip-alert.html -%}
-        <main>{{content}}</main>
-        <ul id="tutorials-list">
+        <!-- {%- include wip-alert.html -%} -->
+        <!-- <main>{{content}}</main> -->
+        <main>
+            <h1>Content Removed</h1>
+            <p>The content you are looking for has been removed.</p>
+        </main>
+        <!-- <ul id="tutorials-list">
             <a href="/physics/electrical-engineering/"><li>Introduction to Electrical Engineering</li></a>
             <a href="/physics/electrical-engineering/electricity/"><li>Electricity</li></a>
             <a href="/physics/electrical-engineering/conductors-insulators/"><li>Conductors and Insulators</li></a>
@@ -21,7 +25,7 @@
             <a href="/physics/electrical-engineering/inductors/"><li>Inductors</li></a>
             <a href="/physics/electrical-engineering/diodes/"><li>Diodes</li></a>
             <a href="/physics/electrical-engineering/transistors/"><li>Transistors</li></a>
-        </ul>
+        </ul> -->
         {%- include footer.html -%}
     </body>
 </html>
