--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div id="footer-icons">
-        <a href=https://discord.gg/aecVAgzgqV" class="footer-link"><i class="fab fa-discord fa-2x"></i></a>
+        <a href="https://discord.gg/aecVAgzgqV" class="footer-link"><i class="fab fa-discord fa-2x"></i></a>
         <a target="_blank" href="https://github.com/learnmonkey/learnmonkey.github.io" class="footer-link"><i class="fab fa-github-square footer-icon fa-2x"></i></a>
         <a href="/settings/" class="footer-link"><i class="fas fa-cog footer-icon fa-2x"></i></a>
     </div>
